# crewAI-example

./: .gitignore  README.md  main.py  pyproject.toml
src/trip_planner/: __init__.py  agents.py  crew.py  main.py
